[package]
name = "yew-art"
version = "0.1.0"
authors = ["R4chel"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"] 

[dependencies]
wasm-bindgen = "0.2.70"
yew = "0.17.4"
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"]}
js-sys = "0.3.47"


[dependencies.web-sys]
version = "0.3.4"
features = [
'Blob',
'BlobPropertyBag',
'Element',
'HtmlAnchorElement',

  'XmlSerializer',
]